hidden little error yay